# template

./: .env.example  .gitignore  AGENTS.md  LICENSE  README-PROJECT.md  README.md  azure.yaml  ip-metadata.json
.azure/: README.md
.github/: azure-bestpractices.md  bicep-deployment-bestpractices.md  copilot-instructions.md  ip-metadata.json  ip-metadata.schema.json
.github/agents/: GBB.agent.md  app-developer.agent.md  azure-docs-research.agent.md  infra-architect.agent.md
.github/instructions/: bicep.instructions.md  dockerfile.instructions.md  dotnet.instructions.md  python.instructions.md  typescript.instructions.md
.github/prompts/: addAzdService.prompt.md  checkAzdCompliance.prompt.md  generatePitch.prompt.md  ipCompliance.prompt.md  ipMetadata.prompt.md  newAgentApp.prompt.md  newDotNetApp.prompt.md  newGradioApp.prompt.md  newNodeApp.prompt.md  newPythonApp.prompt.md  newReactApp.prompt.md  newReadme.prompt.md  newStreamlitApp.prompt.md  research-collect.prompt.md  research-plan.prompt.md  setupInfra.prompt.md
.github/skills/agents-v2-py/: SKILL.md
.github/skills/aigbb-azd-compliance/: SKILL.md
.github/skills/aigbb-azure-security/: SKILL.md
.github/skills/aigbb-ip-standards/: SKILL.md
.github/skills/aigbb-observability/: SKILL.md
.github/workflows/: azure-deploy.yml  azure-infra.yml  gbb-demo.yml
infra/: abbreviations.json  main.bicep  main.parameters.json
infra/data/: README.md
infra/scripts/: postdeploy.py  postprovision.py  predeploy.py  preprovision.py  pyproject.toml  utils.py
schemas/: ip-metadata.schema.json
src/: README.md
(+30 files in other folders)
