[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azd-scripts"
version = "0.1.0"
description = "Azure Developer CLI hook scripts and utilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Add your project dependencies here
    # Examples:
    # "requests>=2.31.0",
    # "python-dotenv>=1.0.0",
    # "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0", 
    "ruff>=0.1.0",
    "mypy>=1.7.0"
]

[tool.black]
line-length = 79
target-version = ['py39']

[tool.ruff]
select = ["E", "F", "UP", "B", "SIM", "I"]
fix = true
line-length = 79
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true